# unidoc2md

./: .gitignore  README.md  build_locale.py  locale.py  main.py  pyproject.toml  requirements.txt  urb-app.spec
.run/: Build - App.run.xml  Build - Locale.run.xml  Run - Dev.run.xml  Sync - Build.run.xml  Sync - Dev.run.xml  Sync - Prod.run.xml  Test - Core.run.xml  Test - Full.run.xml  Test - GUI.run.xml  Test - Modules.run.xml
assets/data/: llm_models_registry.json
assets/locale/: en.json  ru.json  zh.json
docs/en/: README.md  file-extract-module.md  manual-build.md  project-structure.md
docs/ru/: README.md  file-extract-module.md  manual-build.md  project-structure.md
docs/zh/: README.md  file-extract-module.md  manual-build.md  project-structure.md
locale/en/: gui.json  home.json  main.json  models.json  project.json  project_execution.json  project_extract.json  project_image_processing.json  project_markdown.json  project_pipeline.json  project_tagging.json  settings.json
locale/ru/: gui.json  home.json  main.json  models.json  project.json  project_execution.json  project_extract.json  project_image_processing.json  project_markdown.json  project_pipeline.json  project_tagging.json  settings.json
src/: __init__.py  app.py  app_bootstrap.py  app_config.py  app_path.py
tests/: test_smoke.py  test_unsupported.py
tools/: win-build-locale.bat  win-dev-run.bat  win-dev-sync-deps.bat  win-prod-build.bat  win-prod-run.bat  win-prod-sync-deps.bat  win-test-core.bat  win-test-gui.bat  win-test-modules.bat  win-test.bat  win-uv-install.bat
(+351 files in other folders)
